--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,11 +1,15 @@
 <resources>
-    <string name="app_name">Github Searcher</string>
+    <string name="app_name">Take Home</string>
     <string name="hint_search">Enter a a github user id</string>
     <string name="search">SEARCH</string>
-    <string name="name">name</string>
+    <string name="name">Name:</string>
     <string name="repoTitle">Title:</string>
     <string name="stars">Stars:</string>
+    <string name="forksCount">Forks count:</string>
     <string name="repoDescription">Description:</string>
     <string name="with_badge">You have more than 5000 forks!!!</string>
     <string name="without_badge">You have less than 5000 forks</string>
+    <string name="star_icon">Star badge</string>
+    <string name="calculating_forks_count">Calculating forks count !</string>
+    <string name="star_bagde_state_none">None</string>
 </resources>
